cabal-version:      2.4
name:               to-do
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             A Torres
maintainer:         atorres@thecodeofarms.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable to-do
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      App
                      , Types
                      , Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions: DeriveGeneric
                      , OverloadedStrings

    build-depends:      aeson
                      , ansi-terminal
                      , base ^>=4.16.1.0
                      , bytestring
                      , directory
                      , text
                      , text-ansi

    hs-source-dirs:     app

    default-language:   Haskell2010
